--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -2,14 +2,33 @@
 
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+
 <head>
-    <title>Corgi Store | Seller site</title>
+    <title>Corgi Store | Cutest Store</title>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'media/logo.jpg'%}" />
-    <h1 class='header'> <img class='logo' src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
-        <span class='title'>Corgi Store|Seller</span>
-    </h1>
+    <a class="navbar-brand" href="" style="font-weight:bold; color: #ec9410;"> <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
+        Corgi Store
+    </a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Home</a>
+          </li>
+    </div>
+    </nav>
 </head>
 <body>
-    <img class='img-fluid' src="{% static 'media/corgi_main.jpg'%}" alt="">
+    <img src="{% static 'media/corgi_main.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
+    <div class="d-grid gap-2 col-6 mx-auto">
+        <button style="position: absolute;top: 60%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;" type="button">
+            Store</button>
+        <button onclick="location.href='/seller'"
+        style='position: absolute;top: 60%;left: 75%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;' type="button">
+            Seller</button>
+    </div>
 </body>
