--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -20,9 +20,12 @@
             <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Home</a>
           </li>
     </div>
+    {% block nav%}
+    {% endblock %}
     </nav>
 </head>
 <body>
+    {% block content %}
     <img src="{% static 'media/corgi_main.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
     <div class="d-grid gap-2 col-6 mx-auto">
         <button style="position: absolute;top: 60%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;" type="button">
@@ -31,4 +34,5 @@
         style='position: absolute;top: 60%;left: 75%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;' type="button">
             Seller</button>
     </div>
+    {% endblock %}
 </body>
