--- a/corgi/seller/templates/Slogin.html
+++ b/corgi/seller/templates/Slogin.html
@@ -1,6 +1,9 @@
 {% load static %}
 
 <!DOCTYPE html>
+{% if user.is_authenticated %}
+<meta http-equiv="refresh" content="7; url='localhost:8000/seller/'" />
+{% else %}
 <html>
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <head>
@@ -25,4 +28,5 @@
 <footer>
 
 </footer>
+{% endif %}
 <html>
