--- a/corgi/seller/templates/Slogin.html
+++ b/corgi/seller/templates/Slogin.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 {% if user.is_authenticated %}
-<meta http-equiv="refresh" content="7; url='localhost:8000/seller/'" />
+<meta http-equiv="refresh" content="0; url='/seller/'" />
 {% else %}
 <html>
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
