--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -17,20 +17,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Home</a>
+            <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
           </li>
+          {% block nav%}
+          {% endblock %}
+        </ul>
     </div>
-    {% block nav%}
-    {% endblock %}
     </nav>
 </head>
 <body>
     {% block content %}
     <img src="{% static 'media/corgi_main.jpg'%}" class='img-fluid' alt="" style='width: 100%;height: 1000px;'>
     <div class="d-grid gap-2 col-6 mx-auto">
-        <button style="position: absolute;top: 60%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;" type="button">
+        <button onclick="location.href='/store'"
+        style="position: absolute;top: 60%;left: 25%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;" type="button">
             Store</button>
-        <button onclick="location.href='/seller'"
+        <button onclick="location.href='/seller/login'"
         style='position: absolute;top: 60%;left: 75%;transform: translate(-50%, -50%);-ms-transform: translate(-50%, -50%);background-color: #ec9410;color: white;font-size: 50px;padding: 14px 30px;border: none;cursor: pointer;border-radius: 5px;' type="button">
             Seller</button>
     </div>
