--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -1,7 +1,7 @@
 {% block content %}
   <h1>{{ product.name }}</h1>
-  <p>Shop: {{ product.shop.name }}</p>
-  <p>Location: {{ product.shop.location }}</p>
+  <p>Store: {{ product.shop.name }}</p>
+  <p>Address: {{ product.shop.location }}</p>
   <p>Price: {{ product.price }}</p>
   <a href="{% url 'shop_detail' pk=product.shop.pk %}">Go to shop detail</a>
 {% endblock %}
