--- a/corgi/buyer/templates/store.html
+++ b/corgi/buyer/templates/store.html
@@ -1,7 +1,11 @@
 {% extends "homepage.html"%}
 
 {% block nav %}
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
+      </li>
+      
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="login" style="color: #595959";>login</a>
       </li>
