--- a/corgi/buyer/templates/Bregister.html
+++ b/corgi/buyer/templates/Bregister.html
@@ -1,1 +1,19 @@
 {% extends "homepage.html"%}
+{% block nav %}
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
+</li>
+
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="login" style="color: #595959";>login</a>
+</li>
+{% endblock %}
+
+{% block right-nav %}
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="login" style="color: #595959;";>login</a>
+</li>
+{% endblock %}
