--- a/corgi/buyer/templates/Blogin.html
+++ b/corgi/buyer/templates/Blogin.html
@@ -1,8 +1,17 @@
 {% extends "homepage.html"%}
-
 {% load static %}
-{% block content %}
 
+{% block nav %}
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
+</li>
+
+{% endblock %}
+
+{% block content %}
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 <form method="POST">
     <h1>Login</h1>
