--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -1,3 +1,16 @@
+{% extends "homepage.html" %}
+{% block nav %}
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
+</li>
+
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="login" style="color: #595959";>login</a>
+</li>
+{% endblock %}
 {% block content %}
   <h1>{{ product.name }}</h1>
   <p>Store: {{ product.shop.name }}</p>
