--- a/corgi/buyer/templates/Bregister.html
+++ b/corgi/buyer/templates/Bregister.html
@@ -4,7 +4,7 @@
   <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
+  <a class="nav-link active" aria-current="page" href="/categories" style="color: #595959";>Categories</a>
 </li>
 
 <li class="nav-item">
@@ -14,6 +14,6 @@
 
 {% block right-nav %}
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="login" style="color: #595959;";>login</a>
+  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959;";>login</a>
 </li>
 {% endblock %}
