--- a/corgi/buyer/templates/category_list.html
+++ b/corgi/buyer/templates/category_list.html
@@ -10,7 +10,7 @@
 
 {% block right-nav %}
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="login" style="color: #595959;";>login</a>
+  <a class="nav-link active" aria-current="page" href="/login" style="color: #595959;";>login</a>
 </li>
 {% endblock %}
 
