--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -12,15 +12,19 @@
 </li>
 {% endblock %}
 {% block content %}
-  <h1>{{ category.name }}</h1>
-  <ul>
+<h1>{{ category.name }}</h1>
+<ul>
   {% for product in products %}
-    <li>
-      <h2>{{ product.name }}</h2>
-      <img src="{{ product.image.url }}" alt="{{ product.name }}">
-      <p>Price: {{ product.price }}</p>
-      <p>Location: {{ product.shop.location }}</p>
-    </li>
+  <div class="card" style="width: 18rem;">
+    <img class='card-img-top' src="{{ product.image.url }}" alt="{{ product.name }}">
+    <div class="card-body">
+      <h2 class="card-title">{{ product.name }}</h2>
+      <ul class="list-group list-group-flush">
+      <li class="list-group-item">Price: {{ product.price }}</li>
+      <li class="list-group-item">Location: {{ product.shop.location }}</li>
+      </ul>
+    </div>
+  </div>
   {% endfor %}
   </ul>
 {% endblock %}
