Update Category page

--- a/corgi/buyer/templates/category_list.html
+++ b/corgi/buyer/templates/category_list.html
@@ -24,6 +24,7 @@
           <img class="card-img-top" src="{{ category.image.url }}" alt="{{ category.name }}" width="200" height="700">
             <div class="card-body">
             <h1 class="card-title" style='font-size:40px;'>{{ category.name }}</h2>
+            <a class='stretched-link' href="{{ category.id }}"></a>
             </div>
         </div>
       </div>
