--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -14,44 +14,40 @@
 {% block content %}
 <h1>{{ category.name }}</h1>
 <ul>
+  <div style="display: flex;">
   {% for product in products %}
   <div class="card" style="width: 18rem;">
-    <img class='card-img-top' src="{{ product.image.url }}" alt="{{ product.name }}">
+    {% if product.image %}
+    <img src="{{ product.image.url }}" alt="{{ product.name }}">
+    {% else %}
+      <p>No image available</p>
+    {% endif %}
     <div class="card-body">
       <h2 class="card-title">{{ product.name }}</h2>
       <ul class="list-group list-group-flush">
-      <li class="list-group-item">Price: {{ product.price }}</li>
-      <li class="list-group-item">Location: {{ product.shop.location }}</li>
-      </ul>
-    </div>
-  </div>
-  {% endfor %}
-  {% for product in products %}
-  <h1>{{ product.category.name }}</h1>
-    <ul>
-      <li>
-        <h2>{{ product.name }}</h2>
-        {% if product.image %}
-          <img src="{{ product.image.url }}" alt="{{ product.name }}" width="300" height="300">
-        {% else %}
-          <p>No image available</p>
-        {% endif %}
+      <li class="list-group-item"><h5>        
         {% if product.category %}
-          <p>Category: {{ product.category.name }}</p>
+        <p>Category: {{ product.category.name }}</p>
         {% else %}
-          <p>No category available</p>
+        <p>No category available</p>
         {% endif %}
-        <p>Price: {{ product.price }}</p>
+        </h5></li>
+      <li class="list-group-item">Price: {{ product.price }}</li>
+      <li class="list-group-item">        
         {% if product.seller %}
-          <p>store_name: {{ product.seller.store_name }}</p>
-          <p>address: {{ product.seller.address }}</p>
+        <p>Store name: {{ product.seller.store_name }}</p>
+        <p>Address: {{ product.seller.address }}</p>
         {% else %}
           <p>No seller information available</p>
         {% endif %}
       </li>
-    </ul>
+      </ul>
+    </div>
+  </div>
+  {% endfor %}
+  </div>
+  {% for product in products %}
   {% empty %}
     <h1>No products found.</h1>
     {% endfor %}
-  </ul>
 {% endblock %}
