--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -29,6 +29,8 @@
          <button type="add" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;">Add to Cart</button>
          <hr>
          <button type="buy" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;">Buy</button>
+         <hr>
+         <button type="link" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;">Go to Shop</button>
         </div>
     </ul>
   {% empty %}
