--- a/corgi/homepage/templates/homepage.html
+++ b/corgi/homepage/templates/homepage.html
@@ -8,10 +8,10 @@
 
 <head>
     <title>Corgi Store | Cutest Store</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'media/logo.jpg'%}" />
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'media/logo.jpg'%}" />
-    <a class="navbar-brand" href="" style="font-weight:bold; color: #ec9410;"> <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
+    <a class="navbar-brand" href="/" style="font-weight:bold; color: #ec9410;"> <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
         Corgi Store
     </a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
