seller product buttom

--- a/corgi/seller/templates/seller_product.html
+++ b/corgi/seller/templates/seller_product.html
@@ -14,6 +14,12 @@
     </div>
 </div>
 {% block content %}
+<div class="card-footer">
+    <p class="card-text">
+        <button type="submit" class="btn btn-sm btn-success float-right" style="font-size: 12px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Add Product</button>
+    </p>
+  </div>
+
     <div class="col-md-10">
         <table class="table table-striped">
             <thead>
