--- a/corgi/seller/templates/Slogin.html
+++ b/corgi/seller/templates/Slogin.html
@@ -21,7 +21,7 @@
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
-            <div><p>don't have account? <a href='register'>Register</a></p></div>
+            <div><p>don't have account? <a href='/seller/register'>Register</a></p></div>
             
     </form>
 </body>
