--- a/corgi/buyer/templates/category_list.html
+++ b/corgi/buyer/templates/category_list.html
@@ -21,7 +21,7 @@
   {% for category in categories %}
       <div class="col">
         <div class="card" style="background-color:#f8bc63;" >
-          <img class="card-img-top" src="{{ category.image.url }}" alt="{{ category.name }}" width="200" height="auto">
+          <img class="card-img-top" src="{{ category.image.url }}" alt="{{ category.name }}" height="300">
             <div class="card-body">
             <h1 class="card-title" style='font-size:40px;'>{{ category.name }}</h2>
             <a class='stretched-link' href="{{ category.id }}"></a>
