--- a/corgi/buyer/templates/store_detail.html
+++ b/corgi/buyer/templates/store_detail.html
@@ -17,12 +17,11 @@
 {% block content %}
 {% for store in stores %}
     <ul>
-        <li>
+            <img src="{{ store.store_image.url }}" class="img-fluid" alt="{{ store.store_name }}" width="750" height="450">
             <h1>{{ store.store_name }}</h1>
-            <img src="{{ store.store_image.url }}" alt="{{ store.store_name }}", width="750" height="450">
+            <!-- <img src="{{ store.store_image.url }}" alt="{{ store.store_name }}", width="750" height="450"> -->
             <p>Phone: {{ store.phone }}</p>
             <p>Address: {{ store.address }}</p>
-        </li>
     </ul>
     {% empty %}
     <h2>No products found.</h2>
