--- a/corgi/buyer/templates/store.html
+++ b/corgi/buyer/templates/store.html
@@ -1,5 +1,19 @@
 {% extends "homepage.html"%}
 
+<style>
+  .custom-nav {
+    height: 100vh;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    margin-right: 0;
+    margin-left: -15px;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow-x: hidden;
+  }
+</style>
 {% block nav %}
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
@@ -16,5 +30,34 @@
 {% endblock %}
 
 {% block content %}
-Store
+<h1> Featured Product </h1>
+<div class="navbar navbar-expand-lg navbar-light bg-light custom-nav flex-column" style="height: 100vh;
+padding-top: 2rem;
+padding-bottom: 2rem;
+margin-right: 0;
+margin-left: -15px;
+width: 250px;
+position: fixed;
+top: 0;
+left: 0;
+overflow-x: hidden;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link 1</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link 2</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link 3</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
+
+
 {% endblock %}
