--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -1,74 +1,69 @@
 {% extends "homepage.html" %}
+
 {% block nav %}
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
+  <a class="nav-link active" aria-current="page" href="/" style="color: #595959;">Home</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959";>Categories</a>
+  <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959;">Categories</a>
 </li>
 {% endblock %}
 
 {% block right-nav %}
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/login" style="color: #595959;";>login</a>
+  <a class="nav-link active" aria-current="page" href="/login" style="color: #595959;">Login</a>
 </li>
 {% endblock %}
+
 {% block content %}
-
 {% for product in products %}
-  {% comment %} <h1>{{ product.category.name }}</h1> {% endcomment %}
-      <div class="card mb-3" style="border:0px;">
-        <div class="row g-0">
-          <div class="col-md-4">        
-            <img class="img-fluid rounded-start" src="{{ product.image.url }}" alt="{{ product.name }}" >
-          </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h2 class="card-title" style="font-family: Arial, sans-serif;">{{ product.name }}</h2>
-                <p class="card-text">{{ product.category.name }}</p>
-                <p class="card-text">{{ product.description }}</p>
-                <p class="card-text">Price: {{ product.price }}</p>
-                <p class="card-text">Store name: {{ product.seller.store_name }}</p>
-                <p class="card-text">Address: {{ product.seller.address }}</p>
-                <!--Add to Cart-->
-              </div>
-                <div class="card-footer">
-                  <p class="card-text">
-                      
-                      <button type="add" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Add to Cart</button>
-                      <!-- <button type="buy" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:15px;">Buy</button> -->
-                      <!-- <a href="{% url 'cart'  %}" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Buy</a> -->
-                      <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                        Launch static backdrop modal
-                      </button>
-
-                      <!-- Modal -->
-                      <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                              <img class="img-fluid rounded-start" src="{{ product.image.url }}" alt="{{ product.name }}" >
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                              <button type="button" class="btn btn-primary">Understood</button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                      <a href="{% url 'store_detail' product.seller.store_name %}" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Go to Shop</a>
-                  </p>
-              </div>
-              
-              </div>
+  <div class="card mb-3" style="border:0px;">
+    <div class="row g-0">
+      <div class="col-md-4">        
+        <img class="img-fluid rounded-start" src="{{ product.image.url }}" alt="{{ product.name }}" >
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h2 class="card-title" style="font-family: Arial, sans-serif;">{{ product.name }}</h2>
+          <p class="card-text">{{ product.category.name }}</p>
+          <p class="card-text">{{ product.description }}</p>
+          <p class="card-text">Price: {{ product.price }}</p>
+          <p class="card-text">Store name: {{ product.store_name }}</p>
+          <p class="card-text">Address: {{ product.address }}</p>
+        </div>
+        <div class="card-footer">
+          <p class="card-text">
+            <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;" data-bs-toggle="modal" data-bs-target="#buy-modal-{{ product.id }}">Buy</button>
+            <a href="{% url 'cart' %}" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Add to Cart</a>
+            <!-- store พังอยู่ลิ้งไม่ได้จ้าาาาา -->
+            <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:15px;">Go to Store</button>
+          </p>
         </div>
       </div>
-  {% empty %}
-    <h1>No products found.</h1>
+    </div>
+  </div>
+  <div class="modal fade" id="buy-modal-{{ product.id }}" tabindex="-1" aria-labelledby="buy-modal-{{ product.id }}-label" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="buy-modal-{{ product.id }}-label">Buy {{ product.name }}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form method="post" action="{% url 'checkout' %}">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="amount-input">Amount:</label>
+              <input type="number" name="amount" id="amount-input" class="form-control" min="1" value="1" required>
+            </div>
+            <input type="hidden" name="product_id" value="{{ product.id }}">
+            <button type="submit" class="btn btn-primary">Buy Now</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
   {% endfor %}
 {% endblock %}
 
