--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -34,46 +34,58 @@
         <div class="card-footer">
           <p class="card-text">
             <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;" data-bs-toggle="modal" data-bs-target="#buy-modal-{{ product.id }}">Buy</button>
-            <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;" data-bs-toggle="modal" data-bs-target="#Add to Cart-modal-{{ product.id }}">Add to Cart</button>
+            
+            <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;" data-bs-toggle="modal" data-bs-target="#Add-to-Cart-modal-{{ product.id }}">Add to Cart</button>
+            
             <!-- <a href="{% url 'cart' %}" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;">Add to Cart</a> -->
             <!-- store พังอยู่ลิ้งไม่ได้จ้าาาาา -->
             <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:15px;">Go to Store</button>
+            <div class="modal fade" id="buy-modal-{{ product.id }}" tabindex="-1" aria-labelledby="buy-modal-{{ product.id }}-label" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="buy-modal-{{ product.id }}-label">Buy {{ product.name }}</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form method="post" action="{% url 'checkout' %}">
+                      {% csrf_token %}
+                      <div class="form-group">
+                        <label for="amount-input">Amount:</label>
+                        <input type="number" name="amount" id="amount-input" class="form-control" min="1" value="1" required>
+                      </div>
+                      <input type="hidden" name="product_id" value="{{ product.id }}">
+                      <button type="submit" class="btn btn-primary">Buy Now</button>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal fade" id="Add-to-Cart-modal-{{ product.id }}" tabindex="-1" aria-labelledby="Add-to-Cart-modal-{{ product.id }}" aria-hidden="true">
+              <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="Add-to-Cart-modal-{{ product.id }}-label">Buy {{ product.name }}</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <form method="post">
+                      {% csrf_token %}
+                      <label for="quantity">Quantity:</label>
+                      <input type="number" name="quantity" value="1" min="1">
+                      <button type="submit" class="btn btn-primary">Add to cart</button>
+                    </form>
+                    <a class="btn btn-secondary" href="/store/categories">Continue Shopping</a>
+                  </div>
+                </div>
+              </div>
+            </div>
           </p>
         </div>
       </div>
     </div>
   </div>
-  <div class="modal fade" id="buy-modal-{{ product.id }}" tabindex="-1" aria-labelledby="buy-modal-{{ product.id }}-label" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="buy-modal-{{ product.id }}-label">Buy {{ product.name }}</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form method="post" action="{% url 'checkout' %}">
-            {% csrf_token %}
-            <div class="form-group">
-              <label for="amount-input">Amount:</label>
-              <input type="number" name="amount" id="amount-input" class="form-control" min="1" value="1" required>
-            </div>
-            <input type="hidden" name="product_id" value="{{ product.id }}">
-            <button type="submit" class="btn btn-primary">Buy Now</button>
-          </form>
-        </div>
 
-        <div class="modal-body">
-          <form method="post">
-            {% csrf_token %}
-            <label for="quantity">Quantity:</label>
-            <input type="number" name="quantity" value="1" min="1">
-            <button type="submit">Add to cart</button>
-          </form>
-          <a href="{% url 'category_list' %}">Continue Shopping</a>
-        </div>
-      </div>
-    </div>
-  </div>
 
   {% endfor %}
 {% endblock %}
