--- a/corgi/buyer/templates/store.html
+++ b/corgi/buyer/templates/store.html
@@ -31,7 +31,7 @@
 
 {% block content %}
 <h1> Featured Product </h1>
-<div class="navbar navbar-expand-lg navbar-light bg-light custom-nav flex-column" style="height: 100vh;
+{% comment %} <div class="navbar navbar-expand-lg navbar-light bg-light custom-nav flex-column" style="height: 100vh;
 padding-top: 2rem;
 padding-bottom: 2rem;
 margin-right: 0;
@@ -54,7 +54,7 @@ overflow-x: hidden;">
         <a class="nav-link" href="#">Link 3</a>
       </li>
     </ul>
-  </div>
+  </div> {% endcomment %}
 </div>
 
 
