--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -28,8 +28,8 @@
           <p class="card-text">{{ product.category.name }}</p>
           <p class="card-text">{{ product.description }}</p>
           <p class="card-text">Price: {{ product.price }}</p>
-          <p class="card-text">Store name: {{ product.store_name }}</p>
-          <p class="card-text">Address: {{ product.address }}</p>
+          <p class="card-text">Store name: {{ product.seller.store_name }}</p>
+          <p class="card-text">Address: {{ product.seller.address }}</p>
         </div>
         <div class="card-footer">
           <p class="card-text">
