--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -6,13 +6,25 @@
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
 </li>
-
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Chat with Corgi</a>
+</li>
 {% endblock %}
 {% block right-nav%}
+<form class="d-flex" role="search">
+  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" >
+  <button class="btn btn-outline-success" type="submit" >Search</button>
+</form>
+
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="cart" style="color: #595959";>cart</a>
+</li>
+
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="login" style="color: #595959";>login</a>
 </li>
 {% endblock %}
+
 {% block content %}
 <h1>{{ category.name }}</h1>
 <ul>
