--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -27,7 +27,7 @@
           <h2 class="card-title" style="font-family: Arial, sans-serif;">{{ product.name }}</h2>
           <p class="card-text">{{ product.category.name }}</p>
           <p class="card-text">{{ product.description }}</p>
-          <p class="card-text">Price: {{ product.price }}</p>
+          <p class="card-text">Price: {{ product.price }} ฿</p>
           <p class="card-text">Store name: {{ product.store_name }}</p>
           <p class="card-text">Address: {{ product.address }}</p>
         </div>
