--- a/corgi/buyer/templates/store base.html
+++ b/corgi/buyer/templates/store base.html
@@ -5,6 +5,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <head>
+    <title>
+        Corgi | Seller Site
+    <title>
+        
+</head>
+
+<body>
+
+</body>
+
+<footer>
+
+</footer>
+</html>
+
 
