--- a/corgi/buyer/templates/category_list.html
+++ b/corgi/buyer/templates/category_list.html
@@ -4,7 +4,10 @@
   <a class="nav-link active" aria-current="page" href="/" style="color: #595959";>Home</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
+  <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959";>Categories</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Chat with Corgi</a>
 </li>
 {% endblock %}
 
@@ -12,6 +15,7 @@
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="/login" style="color: #595959;";>login</a>
 </li>
+
 {% endblock %}
 
 {% block content %}
