--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -7,11 +7,18 @@
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959;">Categories</a>
 </li>
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Chat with Corgi</a>
+</li>
 {% endblock %}
 
 {% block right-nav %}
 <li class="nav-item">
-  <a class="nav-link active" aria-current="page" href="/login" style="color: #595959;">Login</a>
+  <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>cart</a>
+</li>
+
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>login</a>
 </li>
 {% endblock %}
 
