--- a/corgi/buyer/templates/store.html
+++ b/corgi/buyer/templates/store.html
@@ -21,7 +21,9 @@
 <li class="nav-item">
   <a class="nav-link active" aria-current="page" href="categories" style="color: #595959";>Categories</a>
 </li>
-
+<li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Chat with Corgi</a>
+</li>
 {% endblock %}
 {% block right-nav %}
 <li class="nav-item">
