--- a/corgi/buyer/templates/category_detail.html
+++ b/corgi/buyer/templates/category_detail.html
@@ -7,6 +7,9 @@
   <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959";>Categories</a>
 </li>
 <li class="nav-item">
+  <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Order Status</a>
+</li>
+<li class="nav-item">
   <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Chat with Corgi</a>
 </li>
 {% endblock %}
