--- a/corgi/buyer/templates/product_detail.html
+++ b/corgi/buyer/templates/product_detail.html
@@ -35,7 +35,7 @@
           <p class="card-text">{{ product.category.name }}</p>
           <p class="card-text">{{ product.description }}</p>
           <p class="card-text">Price: {{ product.price }} ฿</p>
-          <p class="card-text">Store name: {{ product.seller.store_name }}</p>
+          <p class="card-text">Store name: {{ product.seller.store_name }} Store</p>
           <p class="card-text">Address: {{ product.seller.address }}</p>
         </div>
         <div class="card-footer">
@@ -45,7 +45,8 @@
             <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63; border-color:#f8bc63; padding:15px;" data-bs-toggle="modal" data-bs-target="#Add-to-Cart-modal-{{ product.id }}">Add to Cart</button>
             
             <!-- store พังอยู่ลิ้งไม่ได้จ้าาาาา -->
-            <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:15px;" >Go to Store</button>
+            <!-- <button type="button" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:15px;" >Go to Store</button> -->
+            <a href="{% url 'store_detail' store_name=product.seller.store_name %}" class="btn btn-sm btn-success col-lg-3" style="font-size: 16px; background-color: #f8bc63;  border-color:#f8bc63; padding:15px;">Go to Store</a>
             <div class="modal fade" id="buy-modal-{{ product.id }}" tabindex="-1" aria-labelledby="buy-modal-{{ product.id }}-label" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
