--- a/corgi/buyer/templates/store base.html
+++ b/corgi/buyer/templates/store base.html
@@ -4,17 +4,120 @@
 <html>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 <head>
-    <title>
-        Corgi | Seller Site
-    <title>
-        
+    <title>Corgi Store | Cutest Store</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'media/logo.jpg'%}" />
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+    <a class="navbar-brand" href="/" style="font-weight:bold; font-size:36px; color: #ec9410;"> <img class="navbar-brand" src="{% static 'media/logo.jpg'%}" alt="" width="100" height="100">
+        Corgi Store
+    </a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+{% block nav %}
+{% endblock %}
+        </ul>
+    </div>
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+{% block right-nav %}
+<form class="d-flex" role="search" action="{% url 'search' %}">
+    <input class="form-control me-2" type="search" name="q" placeholder="All Product Search" aria-label="Search" >
+    <button class="btn btn-outline-warning" type="submit" style="margin-left:7px;">Search</button>
+  </form>
+  
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/store/cart" style="color: #595959";>cart</a>
+  </li>
+  
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="/store/login" style="color: #595959";>login</a>
+  </li>
+{% endblock %}
+    </ul>
+</div>
+</nav>
+
 </head>
 
 <body>
-
+    <section class="pt-5 pb-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <h1 class="mb-3" style="color: #ec9410;">Featured Products </h1>
+                </div>
+                <div class="col-6 text-right">
+                    <a class="btn btn-warning mb-3 mr-1" href="#carouselExampleIndicators2" role="button" data-slide="prev">
+                        <i class="fa fa-arrow-left"></i>
+                    </a>
+                    <a class="btn btn-warning mb-3 " href="#carouselExampleIndicators2" role="button" data-slide="next">
+                        <i class="fa fa-arrow-right"></i>
+                    </a>
+                </div>
+                <div class="col-12">
+                    <div id="carouselExampleIndicators2" class="carousel slide" data-ride="carousel">
+    
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    {% for product in products|slice:"0:3" %}
+                                    <div class="col-md-4 mb-3">
+                                        <div class="card">
+                                            <img class="img-fluid" alt="100%x280" src="{{ product.image.url }}">
+                                            <div class="card-body">
+                                                <h4 class="card-title">{{ product.name }}</h4>
+                                                <p class="card-text">{{ product.price }}</p>
+    
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+                                    {% for product in products|slice:"3:6" %}
+                                    <div class="col-md-4 mb-3">
+                                        <div class="card">
+                                            <img class="img-fluid" alt="100%x280" src="{{ product.image.url }}">
+                                            <div class="card-body">
+                                                <h4 class="card-title">{{ product.name }}</h4>
+                                                <p class="card-text">{{ product.price }}</p>
+    
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row">
+    
+                                    {% for product in products|slice:"6:9" %}
+                                    <div class="col-md-4 mb-3">
+                                        <div class="card">
+                                            <img class="img-fluid" alt="100%x280" src="{{ product.image.url }}">
+                                            <div class="card-body">
+                                                <h4 class="card-title">{{ product.name }}</h4>
+                                                <p class="card-text">{{ product.price }}</p>
+    
+                                            </div>
+                                        </div>
+                                    </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 <footer>
