--- a/corgi/buyer/templates/store base.html
+++ b/corgi/buyer/templates/store base.html
@@ -20,6 +20,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 {% block nav %}
+    <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/" style="color: #595959;">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/store/categories" style="color: #595959;">Categories</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="" style="color: #595959";>Chat with Corgi</a>
+    </li>
 {% endblock %}
         </ul>
     </div>
