some major change to login and cart

--- a/corgi/buyer/templates/cart.html
+++ b/corgi/buyer/templates/cart.html
@@ -28,14 +28,15 @@
             align-items: center;
         }
         .Heading{
-            font-size: 20px;
-            font-family: ‘Open Sans’;
+            margin-top: 20px;
+            font-size: 30px;
+            font-family: Arial, sans-serif;
             font-weight: 700;
             color: #2F3841;
         }
         .Action{
             font-size: 14px;
-            font-family: ‘Open Sans’;
+            font-family: Arial, sans-serif;
             font-weight: 600;
             color: #E44C4C;
             cursor: pointer;
@@ -60,14 +61,14 @@
             padding-top: 5px;
             line-height: 10px;
             font-size: 32px;
-            font-family: ‘Open Sans’;
+            font-family: Arial, sans-serif;
             font-weight: 800;
             color: #202020;
         }
         .subtitle{
             line-height: 10px;
             font-size: 18px;
-            font-family: ‘Open Sans’;
+            font-family: Arial, sans-serif;
             font-weight: 600;
             color: #909090;
         }
@@ -76,7 +77,7 @@
 <body>
     <div class="Cart-Container">
         <div class="Header">
-            <h3 class="Heading">Shopping Cart</h3>
+            <h1 class="Heading">Shopping Cart</h1>
             <h5 class="Action">Remove all</h5>
         </div>
     </div>
